--- a/Pages/login.html
+++ b/Pages/login.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div class="form-container">
-        <h2>Log In</h2>
-        <form id="loginForm">
-            <input type="email" id="loginEmail" placeholder="Email" required><br>
-            <input type="password" id="loginPassword" placeholder="Password" required><br>
-            <button type="submit">Log In</button>
-        </form>
-        <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+    <div class="auth-container">
+        <div class="form-container">
+            <h2>Log In</h2>
+            <form id="loginForm">
+                <input type="email" id="loginEmail" placeholder="Email" required><br>
+                <input type="password" id="loginPassword" placeholder="Password" required><br>
+                <button type="submit">Log In</button>
+            </form>
+            <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
+        </div>
     </div>
 
     <script src="renderer.js"></script>
@@ -30,7 +32,7 @@
             const password = document.getElementById('loginPassword').value;
 
             try {
-                const response = await axios.post('http://192.168.99.118:8000/api/login/', {
+                const response = await axios.post('http://192.168.1.108:8000/api/login/', {
                     email: email,
                     password: password
                 });
@@ -38,15 +40,14 @@
                 console.log(response.data);
                 if (response.status === 200) {
                     const token = response.data.token;
-
                     localStorage.setItem('auth_token', token);
-
+                    const useremail = response.data.email;
+                    localStorage.setItem('userEmail',useremail);
                     alert('Login successful!');
                     window.location.href = 'dashboard.html';
                 }
             } catch (error) {
                 console.error('Login failed:', error);
-
                 if (error.response) {
                     const errorMessage = error.response.data.message || 'Login failed. Please check your credentials.';
                     alert(errorMessage);
