--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -13,7 +13,7 @@
             <li><a href="dashboard.html">Dashboard</a></li>
             <li><a href="events.html">Events</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="login.html" onclick="logout()">Logout</a></li>
+            <li><a href="login.html" onclick="logout(event)">Logout</a></li>
         </ul>
     </div>
 
@@ -21,28 +21,53 @@
         <h1>Profile</h1>
         <div class="profile-info">
             <div class="profile-details">
-                <p><strong>USERNAME:</strong>ewq21</p>
-                <p><strong>Email:</strong> johndoe@example.com</p>
+                <p><strong>USERNAME:</strong> <span id="userName">Loading...</span></p>
+                <p><strong>Email:</strong> <span id="userEmail">Loading...</span></p>
             </div>
         </div>
     </div>
 
     <script>
-         document.addEventListener('DOMContentLoaded', function() {
-            var currentPage = window.location.pathname.split('/').pop(); 
-            var links = document.querySelectorAll('.sidenav a'); 
-            links.forEach(function(link) {
-                if (link.href.includes(currentPage)) {
-                    link.classList.add('active');
-                }
-            });
+        document.addEventListener('DOMContentLoaded', function() {
+            // Set initial values to "Loading..."
+            document.getElementById('userName').textContent = 'Loading...';
+            document.getElementById('userEmail').textContent = 'Loading...';
+
+            // Fetch data from localStorage after page load
+            var userEmail = localStorage.getItem('userEmail');
+            var userName = localStorage.getItem('userName');  // Assuming 'userName' is stored in localStorage
+
+            if (userEmail) {
+                document.getElementById('userEmail').textContent = userEmail;
+            } else {
+                document.getElementById('userEmail').textContent = 'No email available';
+            }
+
+            if (userName) {
+                document.getElementById('userName').textContent = userName;
+            } else {
+                document.getElementById('userName').textContent = 'No username available';
+            }
         });
-        function logout() {
-            localStorage.removeItem('auth_token');
-            localStorage.removeItem('user');
-            localStorage.removeItem('all_events');
-            localStorage.removeItem('filtered_events');
-            window.location.href = 'login.html';
+
+        function logout(event) {
+            event.preventDefault(); // Prevent the default <a> tag behavior (navigation)
+            
+            const confirmation = confirm("Are you sure you want to log out?");
+            if (confirmation) {
+                // Remove items from localStorage
+                localStorage.removeItem('auth_token');
+                localStorage.removeItem('userEmail');
+                localStorage.removeItem('userName');
+                localStorage.removeItem('all_events');
+                localStorage.removeItem('filtered_events');
+                
+                // Redirect to login page
+                window.location.href = 'login.html';
+            } else {
+                // User canceled logout, no action taken
+                console.log('Logout canceled');
+            }
         }
     </script>
 </body>
