--- a/Pages/signup.html
+++ b/Pages/signup.html
@@ -7,61 +7,61 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    <div class="form-container">
-        <h2>Create an Account</h2>
-        <form id="signupForm">
-            <input type="text" id="username" placeholder="Username" required><br>
-            <input type="email" id="email" placeholder="Email" required><br>
-            <input type="password" id="password" placeholder="Password" required><br>
-            <input type="password" id="confirmpassword" placeholder="Confirm Password" required><br>
-            <button type="submit">Sign Up</button>
-        </form>
-        <p>Already have an account? <a href="login.html">Log In</a></p>
+    <div class="auth-container">
+        <div class="form-container">
+            <h2>Create an Account</h2>
+            <form id="signupForm">
+                <input type="text" id="username" placeholder="Username" required><br>
+                <input type="email" id="email" placeholder="Email" required><br>
+                <input type="password" id="password" placeholder="Password" required><br>
+                <input type="password" id="confirmpassword" placeholder="Confirm Password" required><br>
+                <button type="submit">Sign Up</button>
+            </form>
+            <p>Already have an account? <a href="login.html">Log In</a></p>
+        </div>
     </div>
 
     <script src="renderer.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script>
         document.getElementById('signupForm').addEventListener('submit', async function (e) {
-    e.preventDefault();
+            e.preventDefault();
 
-    const username = document.getElementById('username').value;
-    const email = document.getElementById('email').value;
-    const password = document.getElementById('password').value;
-    const confirmPassword = document.getElementById('confirmpassword').value;
+            const username = document.getElementById('username').value;
+            const email = document.getElementById('email').value;
+            const password = document.getElementById('password').value;
+            const confirmPassword = document.getElementById('confirmpassword').value;
 
-    // Validate that passwords match
-    if (password !== confirmPassword) {
-        alert('Passwords do not match!');
-        return;
-    }
+            // Validate that passwords match
+            if (password !== confirmPassword) {
+                alert('Passwords do not match!');
+                return;
+            }
 
-    try {
+            try {
+                const response = await axios.post('http://192.168.1.108:8000/api/register/', {
+                    username: username,
+                    email: email,
+                    password: password
+                });
 
-        const response = await axios.post('http://192.168.99.118:8000/api/register/', {
-            username: username,
-            email: email,
-            password: password
+                alert('Account created successfully!');
+                window.location.href = 'login.html';  
+            } catch (error) {
+                console.error('Signup failed:', error);
+                
+                if (error.response) {
+                    console.error("Error response:", error.response);
+                    alert('Error: ' + (error.response.data.message || 'Signup failed. Please try again.'));
+                } else if (error.request) {
+                    console.error("Error request:", error.request);
+                    alert('Network error. Please check your connection or try again later.');
+                } else {
+                    console.error("Error message:", error.message);
+                    alert('Unknown error occurred.');
+                }
+            }
         });
-
-        alert('Account created successfully!');
-        window.location.href = 'login.html';  
-    } catch (error) {
-        console.error('Signup failed:', error);
-        
-        if (error.response) {
-            console.error("Error response:", error.response);
-            alert('Error: ' + (error.response.data.message || 'Signup failed. Please try again.'));
-        } else if (error.request) {
-            console.error("Error request:", error.request);
-            alert('Network error. Please check your connection or try again later.');
-        } else {
-            console.error("Error message:", error.message);
-            alert('Unknown error occurred.');
-        }
-    }
-});
-
     </script>
 </body>
 </html>
