--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="containerIndex">
+        <img src="./logo/logomain.png" alt="Logo" class="logo">
         <h1>Event Scheduling Management System</h1>
         <button onclick="window.location.href='Pages/signup.html'">Sign Up</button>
         <button onclick="window.location.href='Pages/login.html'">Log In</button>
